--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         <p style="text-align:center;">
-            Soy estudiante de primero del doble grado ingeniería de computadores+TSI. Mi objetivo es aprneder a programar y encontrar motivacón para aprenderlo fuera de las clases.
+            Soy estudiante de primero del doble grado ingeniería de computadores+TSI, mi objetivo es aprneder a programar.
         </p>
 
 
